public class Phone{

    newPhone onePlus6 = new newPhone("OnePlus 6", "155.7 x 75.4 x 7.8 mm", 177, "Optic AMOLED",
            6.28, "1080 x 2280 pixels", "Yes", "Android 9.0 (Pie)",
            "Qualcomm Snapdragon 845 Octa-core (4x2.8 GHz Kryo 385 Gold & 4x1.7 GHz Kryo 385 Silver)", "Yes",100);

    newPhone galaxyNote9 = new newPhone("Samsung Galaxy Note9", "161.9 x 76.4 x 8.8 mm", 201,
            "Super AMOLED", 6.4, "1440 x 2960 pixels", "Yes", "Android 8.1 (Oreo)",
            "Qualcomm Snapdragon 845 Octa-core (4x2.8 GHz Kryo 385 Gold & 4x1.7 GHz Kryo 385 Silver)", "Yes",100);

    newPhone mate20pro = new newPhone("Huawei Mate 20 Pro", "157.8 x 72.3 x 8.6 mm", 201,
            "Super AMOLED", 6.4, "1440 x 2960 pixels", "Yes", "Android 8.1 (Oreo)",
            "Qualcomm Snapdragon 845 Octa-core (4x2.8 GHz Kryo 385 Gold & 4x1.7 GHz Kryo 385 Silver)", "Yes",100);

    newPhone iphonexsmax = new newPhone("Apple iPhone XS Max", "157.5 x 77.4 x 7.7 mm", 208,
            "Super AMOLED", 6.5, "1242 x 2688 pixels", "Yes", "iOS 12.1",
            "Apple A12 Bionic Hexa-core (2x2.5 GHz Vortex + 4x1.6 GHz Tempest)", "No (FaceID",100);

    newPhone pixel3xl = new newPhone("Google Pixel 3 XL", "158 x 76.7 x 7.9 mm", 184,
            "P-OLED", 6.3, "1440 x 2960 pixels", "Yes", "Android 9.0 (Pie)",
            "Qualcomm Snapdragon 845 Octa-core (4x2.8 GHz Kryo 385 Gold & 4x1.7 GHz Kryo 385 Silver)", "Yes",100);
}
