public interface PhoneDriver {
    public static void main(String[] args) {
        LoginGUI loginGUI = new LoginGUI();
    }
}
