@startuml

title __ADAM_HURLEYPROJECTOOP's Class Diagram__\n

  package  {
    class BuyGUI {
    }
  }
  

  package  {
    class CheckoutGUI {
    }
  }
  

  package  {
    class CompareGUI {
    }
  }
  

  package  {
    class HomeGUI {
    }
  }
  

  package  {
    class LoginGUI {
    }
  }
  

  package  {
    class Phone {
    }
  }
  

  package  {
    class PhoneDriver {
    }
  }
  

  package  {
    class newPhone {
    }
  }
  

  package  {
    class oldPhone {
    }
  }
  

  BuyGUI -up-|> ActionListener
  BuyGUI -up-|> JFrame
  CheckoutGUI -up-|> JFrame
  CompareGUI -up-|> ActionListener
  CompareGUI -up-|> JFrame
  HomeGUI -up-|> JFrame
  LoginGUI -up-|> ActionListener
  LoginGUI -up-|> JFrame
  Phone o-- newPhone : onePlus6
  Phone o-- newPhone : galaxyNote9
  Phone o-- newPhone : mate20pro
  Phone o-- newPhone : iphonexsmax
  Phone o-- newPhone : pixel3xl
  oldPhone -up-|> newPhone


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
